[package]
name = "narcd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
aws-config = "1.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.11"
local-ip-address = "0.6.5"
log = "0.4.27"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }
russh = "0.51.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["fs", "macros"] }
