[workspace]
resolver = "2"
members = [
    "narcd",
    "narcd-common",
    "narcd-ebpf",
]
default-members = ["narcd", "narcd-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
which = { version = "6.0.0", default-features = false }
anyhow = "1.0.97"
aws-config = "1.8.8"
bytes = "1.11.0"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.11"
local-ip-address = "0.6.5"
log = "0.4.27"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }
russh = "0.51.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["fs", "macros"] }
default-net = "0.22.0"
network-types = "0.1.0"
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
base64 = "0.22"
bincode = "1.3"
flate2 = "1.0"
reqwest = { version = "0.12", features = ["stream"] }
csv-async = { version = "1.3", features = ["tokio"] }
futures-util = "0.3"
maxminddb = { version = "0.24", features = ["mmap"] }
tar = "0.4"
aws-sdk-ssm = "1.68"
uuid = { version = "1.20.0", features = ["v4"] }
tokio-graceful = "0.2.2"
tokio-util = { version = "0.7.18", features = ["rt"] }
moka = { version = "0.12.13", features = ["future"] }
dns-lookup = "3.0.1"
zxcvbn = "3.1.0"
entropy = "0.4.3"

[profile.release.package.narcd-ebpf]
debug = 2
codegen-units = 1
