[package]
name = "narcd-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya"]
std = []
serde = ["std", "dep:serde"]

[dependencies]
aya = { workspace = true, optional = true }
network-types = { workspace = true }
serde = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
