[package]
name = "narcd-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
narcd-common = { path = "../narcd-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "narcd"
path = "src/main.rs"
