[package]
name = "narcd"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
narcd-common = { path = "../narcd-common", features = ["user", "serde", "std"] }

aya.workspace = true
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
anyhow = { workspace = true }
aws-config = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
local-ip-address = { workspace = true }
pretty_env_logger = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
russh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
default-net = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
flate2 = { workspace = true }
reqwest = { workspace = true }
csv-async = { workspace = true }
futures-util = { workspace = true }
maxminddb = { workspace = true }
tar = { workspace = true }
aws-sdk-ssm = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
narcd-ebpf = { path = "../narcd-ebpf" }

[[bin]]
name = "narcd"
path = "src/main.rs"
